cmake_minimum_required(VERSION 3.21)
project(HW3)

set(CMAKE_CXX_STANDARD 98)

add_executable(HW3 Map.h Map.cpp FamilyCar.cpp FamilyCar.h LuxuryCar.cpp LuxuryCar.h SportsCar.cpp SportsCar.h Maserati.cpp Maserati.h main.cpp Car.cpp Car.h Cross.cpp Cross.h Metropolis.h Metropolis.cpp Road.cpp Road.h Reader.cpp Reader.h)
